--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@
                         </div>
                         <div class="button-group">
                             <span>
-                                <button type="submit" id="cash-btn" class="btn btn-primary mr-1"
-                                    onclick="toggleClass('cash-master','show');">
+                                <button type="submit" id="cash-btn" class="btn btn-primary mr-1">
                                     Update Cash
                                 </button>
                             </span>
@@ -87,8 +86,7 @@
                         </div>
                         <div class="button-group mb-1">
                             <span>
-                                <button type="submit" id="user-btn" class="btn btn-primary mr-1"
-                                    onclick="toggleClass('user-master','show');">
+                                <button type="submit" id="user-btn" class="btn btn-primary mr-1">
                                     Update User
                                 </button>
                             </span>
